fix overflowing content on wide screens

--- a/themes/console-home/static/css/components.css
+++ b/themes/console-home/static/css/components.css
@@ -1482,6 +1482,7 @@ body:not(.mobile) .console-control:hover:before {
     flex-flow: column nowrap;
     align-items: flex-end;
     width: inherit;
+    max-width: inherit;
 }
 
 .toc .title.title-4 {
